Add giscus support

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,19 @@ layout: single
 <p>{{ page.date | date: "%F" }}</p>
 
 {{ content }}
+
+<script src="https://giscus.app/client.js"
+        data-repo="alex-oswald/blog"
+        data-repo-id="R_kgDOGSe--w"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOGSe--84CaHp6"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
