--- a/layouts/partials/components/giscus.html
+++ b/layouts/partials/components/giscus.html
@@ -1,15 +1,15 @@
 {{- with site.Params.comments.giscus -}}
 
 <script src="https://giscus.app/client.js"
-        data-repo="{{ .repo }}"
-        data-repo-id="{{ .repoId }}"
-        data-category="{{ .category }}"
-        data-category-id="{{ .categoryId }}"
-        data-mapping="{{ .mapping | default `pathname` }}"
-        data-strict="{{ (string .strict) | default 0 }}"
-        data-reactions-enabled="{{ (string .reactionsEnabled) |  default 1 }}"
-        data-emit-metadata="{{ (string .emitMetadata) | default 0 }}"
-        data-input-position="{{ .inputPosition | default `top` }}"
+        data-repo="alex-oswald/alexoswald.com"
+        data-repo-id="R_kgDOGSe--w"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOGSe--84CaHp7"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
         data-theme="preferred_color_scheme"
         data-lang="en"
         crossorigin="anonymous"
